added reusable tasks to the playbook and made it generic

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 host_key_checking = False
 private_key_file = ~/.ssh/id_ed25519
-inventory = ./production/hosts
-command_warnings=False
+inventory = production/hosts.yaml
+deprecation_warnings=False
