--- a/ros2-build-launch.yaml
+++ b/ros2-build-launch.yaml
@@ -11,7 +11,7 @@
 
     - name: Load required variables from config files
       ansible.builtin.include_vars:
-        file: vars/main.yaml
+        file: vars/ros-config.yaml
 
     - name: set some colcon default flags
       ansible.builtin.include_tasks:
@@ -27,3 +27,4 @@
     - name: Run ros2 launch files 
       ansible.builtin.include_tasks:
         file: tasks/ros2-launch.yaml
+
